--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "request": "^2.65.0",
     "underscore": "^1.8.3"
   }
